--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/PINPAL/Sileo-Depiction-Editor/issues"
   },
-  "homepage": "https://github.com/PINPAL/Sileo-Depiction-Editor#readme"
+  "homepage": "https://github.com/PINPAL/Sileo-Depiction-Editor#readme",
+  "dependencies": {
+    "uglify-js": "^3.6.0"
+  }
 }
